// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render a checked Checkbox 1`] = `
<input
  class="sc-bdfBwQ gLnSbH"
  data-testid="checkbox"
  type="checkbox"
/>
`;

exports[`<Checkbox /> should render a disabled Checkbox 1`] = `
<input
  class="sc-bdfBwQ gLnSbH"
  data-testid="checkbox"
  disabled=""
  readonly=""
  type="checkbox"
/>
`;

exports[`<Checkbox /> should render a unchecked Checkbox 1`] = `
<input
  class="sc-bdfBwQ gLnSbH"
  data-testid="checkbox"
  readonly=""
  type="checkbox"
/>
`;

exports[`<Checkbox /> should render a undisabled Checkbox 1`] = `
<input
  class="sc-bdfBwQ gLnSbH"
  data-testid="checkbox"
  readonly=""
  type="checkbox"
/>
`;
